--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,20 +6,32 @@ table, th, td
     padding: 2px 3px;
     text-align: center;
     margin-left: -25px;
+    font-size: 25px;
 }
 html{
-    background-color: rgb(1, 12, 46);
+    background-color: rgb(5, 1, 39);
     color: wheat;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 h1{
     text-align: center;
     font-size: 40px;
 }
 
-button
-{
+button{
+    font-family: sans-serif;
+    color: crimson;
+    margin: 3px 15px 3px 15px;
+    font-size: 15px;
+    padding: 12px;
+    background-color: rgb(225, 252, 252);
+    border-radius: 25px;
+    border: 2px solid crimson;
+    transition: 0.4s; 
     cursor: pointer;
-    border: none;
-    color: rgb(90, 124, 238);
-    padding: 4px 4px 4px 4px;
-}
+  }
+  button:hover{
+    background-color: crimson;
+    color:rgb(255, 255, 255);
+    border: 2px solid rgb(225, 252, 252)
+  }
