--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,8 +9,8 @@ table, th, td
     font-size: 25px;
 }
 html{
-    background-color: rgb(5, 1, 39);
-    color: wheat;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 h1{
